[package]
name = "solana-exporter"
version = "0.1.0"
authors = ["Vladimir Komendantskiy <komendantsky@gmail.com>"]
edition = "2018"

[dependencies]
clap = "2.33.3"
lazy_static = "1.4"
log = "0.4"
prometheus_exporter = "0.8"
reqwest = { version = "0.10", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
syslog = "5.0"
tokio = { version = "0.2", features = ["full"] }
