[package]
name = "solana-exporter"
description = "Prometheus exporter for the Solana validator"
version = "0.2.0"
authors = ["Vladimir Komendantskiy <komendantsky@gmail.com>"]
repository = "https://github.com/vkomenda/solana-exporter"
license = "Apache-2.0"
readme = "README.md"
edition = "2018"

[dependencies]
clap = "2.33.3"
env_logger = "0.8.3"
lazy_static = "1.4"
log = "0.4"
prometheus_exporter = "0.8"
solana-client = "1.6.6"
solana-sdk = "1.6.6"